// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductTitle Debe de incrementar el contador 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  >
    pulsa
  </button>
</div>
`;

exports[`ProductTitle Debe de mostrar el componente Con sus childs 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product card
  </h1>
</div>
`;
